force-app/main/default/objects/Pilot__c/Pilot__c.object-meta.xml
<CustomObject>
    <label>Pilot</label>
    <nameField>
        <displayFormat>PL-{0000000000}</displayFormat>
        <label>Pilot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pilots</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>