force-app/main/default/objects/Pilot__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>TEXT(Order__r.Opportunity__r.Application__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotUseApplication</label>
    <type>Text</type>
</CustomField>