force-app/main/default/objects/Pilot__c/fields/Application_V2__c.field-meta.xml
<CustomField>
    <fullName>Application_V2__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC</valueSetName>
    </valueSet>
</CustomField>