force-app/main/default/objects/Pilot__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Asset</label>
    <referenceTo>Asset</referenceTo>
    <relationshipLabel>Pilots</relationshipLabel>
    <relationshipName>Pilots</relationshipName>
    <type>Lookup</type>
</CustomField>