force-app/main/default/objects/Pilot__c/fields/BasePointCheck__c.field-meta.xml
<CustomField>
    <fullName>BasePointCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check</description>
    <inlineHelpText>check</inlineHelpText>
    <label>BasePointCheck</label>
    <type>Checkbox</type>
</CustomField>