force-app/main/default/objects/Pilot__c/fields/Commercial_Potential_Research__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Potential_Research__c</fullName>
    <formula>TEXT(Order__r.Opportunity__r.CommercialPotential_Research__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotUseCommercial Potential/Research</label>
    <type>Text</type>
</CustomField>