force-app/main/default/objects/Pilot__c/fields/Commercial_Potential_Research_V2__c.field-meta.xml
<CustomField>
    <fullName>Commercial_Potential_Research_V2__c</fullName>
    <label>Commercial Potential/Research</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Commercial_Potential_Research</valueSetName>
    </valueSet>
</CustomField>