force-app/main/default/objects/Pilot__c/fields/Commissioning_Required__c.field-meta.xml
<CustomField>
    <fullName>Commissioning_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Commissioning Required?</label>
    <type>Checkbox</type>
</CustomField>