force-app/main/default/objects/Pilot__c/fields/Decommissioning_required__c.field-meta.xml
<CustomField>
    <fullName>Decommissioning_required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Decommissioning required?</label>
    <type>Checkbox</type>
</CustomField>