force-app/main/default/objects/Pilot__c/fields/End_Date_Pilot__c.field-meta.xml
<CustomField>
    <fullName>End_Date_Pilot__c</fullName>
    <label>End Date Pilot</label>
    <type>Date</type>
</CustomField>