force-app/main/default/objects/Pilot__c/fields/Hot_Parent_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Hot_Parent_opportunity__c</fullName>
    <formula>Parent_Opportunity__r.Hot_Opportunity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hot_Parent opportunity?</label>
    <type>Checkbox</type>
</CustomField>