force-app/main/default/objects/Pilot__c/fields/Membrane__c.field-meta.xml
<CustomField>
    <fullName>Membrane__c</fullName>
    <formula>TEXT(Order__r.Opportunity__r.Membrane__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotUseMembrane</label>
    <type>Text</type>
</CustomField>