force-app/main/default/objects/Pilot__c/fields/Membrane_V2__c.field-meta.xml
<CustomField>
    <fullName>Membrane_V2__c</fullName>
    <label>Membrane</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Membrane</valueSetName>
    </valueSet>
</CustomField>