force-app/main/default/objects/Pilot__c/fields/Module__c.field-meta.xml
<CustomField>
    <fullName>Module__c</fullName>
    <formula>TEXT(Order__r.Opportunity__r.Module__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotUseModule</label>
    <type>Text</type>
</CustomField>