force-app/main/default/objects/Pilot__c/fields/Module_V2__c.field-meta.xml
<CustomField>
    <fullName>Module_V2__c</fullName>
    <label>Module</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Module</valueSetName>
    </valueSet>
</CustomField>