force-app/main/default/objects/Pilot__c/fields/Ownership_V2__c.field-meta.xml
<CustomField>
    <fullName>Ownership_V2__c</fullName>
    <label>Ownership</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Ownership</valueSetName>
    </valueSet>
</CustomField>