force-app/main/default/objects/Pilot__c/fields/Parent_Opp_WeightedValue__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opp_WeightedValue__c</fullName>
    <formula>Parent_Opportunity__r.Weighted_amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent_Opp_WeightedValue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>