force-app/main/default/objects/Pilot__c/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Pilots (Parent Opportunities)</relationshipLabel>
    <relationshipName>Pilots1</relationshipName>
    <type>Lookup</type>
</CustomField>