force-app/main/default/objects/Pilot__c/fields/Parent_Opportunity_Expected_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Expected_Order_Date__c</fullName>
    <formula>Parent_Opportunity__r.CloseDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity - Expected Order Date</label>
    <type>Date</type>
</CustomField>