force-app/main/default/objects/Pilot__c/fields/Parent_Opportunity_Gross_Amount__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Gross_Amount__c</fullName>
    <formula>Parent_Opportunity__r.Grand_Total_NXF__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity - Gross Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>