force-app/main/default/objects/Pilot__c/fields/Parent_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity_Probability__c</fullName>
    <formula>Parent_Opportunity__r.Probability</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Opportunity - Probability</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>