force-app/main/default/objects/Pilot__c/fields/pilot_engineer__c.field-meta.xml
<CustomField>
    <fullName>pilot_engineer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Engineer</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Pilots</relationshipName>
    <type>Lookup</type>
</CustomField>