force-app/main/default/objects/Pilot__c/fields/Pilot_Goal__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Goal__c</fullName>
    <formula>TEXT(Order__r.Opportunity__r.Pilot_Goal__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotUsePilot Goal</label>
    <type>Text</type>
</CustomField>