force-app/main/default/objects/Pilot__c/fields/Pilot_Goal_V2__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Goal_V2__c</fullName>
    <label>Pilot Goal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pilot_Goal</valueSetName>
    </valueSet>
</CustomField>