force-app/main/default/objects/Pilot__c/fields/Pilot_NAME__c.field-meta.xml
<CustomField>
    <fullName>Pilot_NAME__c</fullName>
    <formula>Opportunity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DoNotUsePilot name</label>
    <type>Text</type>
</CustomField>