force-app/main/default/objects/Pilot__c/fields/Pilot_Name_V2__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Name_V2__c</fullName>
    <label>Pilot Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>