force-app/main/default/objects/Pilot__c/fields/Pilot_Objective__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Objective__c</fullName>
    <formula>Order__r.Opportunity__r.pilot_objective__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pilot Objective</label>
    <type>Text</type>
</CustomField>