force-app/main/default/objects/Pilot__c/fields/Pilot_Objective_V2__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Objective_V2__c</fullName>
    <label>Pilot Objective</label>
    <type>TextArea</type>
</CustomField>