force-app/main/default/objects/Pilot__c/fields/Pilot_type__c.field-meta.xml
<CustomField>
    <fullName>Pilot_type__c</fullName>
    <formula>TEXT(Order__r.Opportunity__r.Pilot_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pilot type</label>
    <type>Text</type>
</CustomField>