force-app/main/default/objects/Pilot__c/fields/Pilot_type_V2__c.field-meta.xml
<CustomField>
    <fullName>Pilot_type_V2__c</fullName>
    <label>Pilot type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Pilot_type</valueSetName>
    </valueSet>
</CustomField>