force-app/main/default/objects/Pilot__c/fields/Start_Date_Pilot__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_Pilot__c</fullName>
    <label>Start Date Pilot</label>
    <type>Date</type>
</CustomField>