force-app/main/default/objects/Pilot__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Commercial stage</fullName>
            </value>
            <value>
                <fullName>Transport</fullName>
            </value>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>In operation</fullName>
            </value>
            <value>
                <fullName>Decommissioning</fullName>
            </value>
            <value>
                <fullName>(Return) transport</fullName>
            </value>
            <value>
                <fullName>Evaluation</fullName>
            </value>
            <value>
                <fullName>Closed out</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>