force-app/main/default/objects/Pilot__c/fields/Update_Parent_opportunity__c.field-meta.xml
<CustomField>
    <fullName>Update_Parent_opportunity__c</fullName>
    <description>Latest update on Parent opportunity</description>
    <formula>Parent_Opportunity__r.Status_Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Latest update on Parent opportunity</inlineHelpText>
    <label>Update_Parent opportunity</label>
    <type>Text</type>
</CustomField>