force-app/main/default/objects/Pilot__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Pilot_NAME__c</columns>
    <columns>pilot_engineer__c</columns>
    <columns>Account__c</columns>
    <columns>End_Date_Pilot__c</columns>
    <columns>Pilot_type__c</columns>
    <columns>NAME</columns>
    <columns>Pilot_Goal__c</columns>
    <columns>Parent_Opportunity__c</columns>
    <columns>Commercial_Potential_Research__c</columns>
    <columns>Commissioning_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All - Pilots</label>
</ListView>