force-app/main/default/objects/Pilot__c/listViews/ALL_MEXPERTS.listView-meta.xml
<ListView>
    <fullName>ALL_MEXPERTS</fullName>
    <booleanFilter>1 OR 2</booleanFilter>
    <columns>NAME</columns>
    <columns>Pilot_NAME__c</columns>
    <columns>pilot_engineer__c</columns>
    <columns>Account__c</columns>
    <columns>End_Date_Pilot__c</columns>
    <columns>Pilot_type__c</columns>
    <columns>Pilot_Goal__c</columns>
    <columns>Parent_Opportunity__c</columns>
    <columns>Commercial_Potential_Research__c</columns>
    <columns>Commissioning_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pilot_type__c</field>
        <operation>contains</operation>
        <value>mexpert</value>
    </filters>
    <filters>
        <field>Pilot_type__c</field>
        <operation>contains</operation>
        <value>mexperience</value>
    </filters>
    <label>ALL MEXPERTS AND MEXPERIENCES</label>
</ListView>