force-app/main/default/objects/Pilot__c/listViews/Copy_of_ALL_MEXPERIENCES.listView-meta.xml
<ListView>
    <fullName>Copy_of_ALL_MEXPERIENCES</fullName>
    <columns>Pilot_NAME__c</columns>
    <columns>pilot_engineer__c</columns>
    <columns>Account__c</columns>
    <columns>End_Date_Pilot__c</columns>
    <columns>Pilot_type__c</columns>
    <columns>NAME</columns>
    <columns>Pilot_Goal__c</columns>
    <columns>Parent_Opportunity__c</columns>
    <columns>Commercial_Potential_Research__c</columns>
    <columns>Commissioning_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pilot_type__c</field>
        <operation>equals</operation>
        <value>mexperience</value>
    </filters>
    <label>ALL MEXPERIENCES</label>
</ListView>