force-app/main/default/objects/Pilot__c/listViews/Other_PILOTS.listView-meta.xml
<ListView>
    <fullName>Other_PILOTS</fullName>
    <columns>NAME</columns>
    <columns>Pilot_NAME__c</columns>
    <columns>pilot_engineer__c</columns>
    <columns>Account__c</columns>
    <columns>End_Date_Pilot__c</columns>
    <columns>Pilot_type__c</columns>
    <columns>Pilot_Goal__c</columns>
    <columns>Parent_Opportunity__c</columns>
    <columns>Commercial_Potential_Research__c</columns>
    <columns>Commissioning_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Order__c</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Asset__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Pilot_type__c</field>
        <operation>notContain</operation>
        <value>exper</value>
    </filters>
    <label>Other PILOTS</label>
</ListView>